--- a/popup.html
+++ b/popup.html
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Save Page URL</title>
+    <title>LinkSave</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
+      rel="stylesheet"
+    />
   </head>
-  <body>
-    <div>
-      <h1>Save Page URL</h1>
-      <button id="save-url">Save Current URL</button>
-      <button id="view-urls">View Saved URLs</button>
+  <body class="bg-gray-100 p-4">
+    <div class="w-64">
+      <h1 class="text-xl font-bold mb-4 text-center">LinkSave</h1>
+    </div>
+    <div class="flex gap-6">
+      <button
+        id="save-url"
+        class="py-3 px-4 inline-flex items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent bg-blue-100 text-blue-800 hover:bg-blue-200 disabled:opacity-50 disabled:pointer-events-none dark:hover:bg-blue-900 dark:text-blue-400"
+      >
+        Save Current URL
+      </button>
+      <button
+        id="open-localhost"
+        class="py-3 px-4 inline-flex items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent bg-blue-100 text-blue-800 hover:bg-blue-200 disabled:opacity-50 disabled:pointer-events-none dark:hover:bg-blue-900 dark:text-blue-400"
+      >
+        View Saved URLs
+      </button>
     </div>
 
     <script src="popup.js"></script>
